<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
        
    <item
        android:id="@+id/navigation_chatbot"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/support" />
</menu>
