<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ecommerce.app.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_categoryProductsFragment"
            app:destination="@id/categoryProductsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.ecommerce.app.fragment.ProductDetailFragment"
        android:label="@string/product_details"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="long" />
        <action
            android:id="@+id/action_productDetailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryProductsFragment"
        android:name="com.ecommerce.app.fragment.CategoryProductsFragment"
        android:label="{categoryName}"
        tools:layout="@layout/fragment_category_products">
        <argument
            android:name="categoryId"
            app:argType="integer" />
        <argument
            android:name="categoryName"
            app:argType="string" />
        <action
            android:id="@+id/action_categoryProductsFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.ecommerce.app.fragment.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
        <action
            android:id="@+id/action_cartFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.ecommerce.app.fragment.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_checkoutFragment_to_orderConfirmationFragment"
            app:destination="@id/orderConfirmationFragment" />
        <action
            android:id="@+id/action_checkoutFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderConfirmationFragment"
        android:name="com.ecommerce.app.fragment.OrderConfirmationFragment"
        android:label="@string/order_confirmation"
        tools:layout="@layout/fragment_order_confirmation">
        <argument
            android:name="orderId"
            app:argType="long" />
        <action
            android:id="@+id/action_orderConfirmationFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.ecommerce.app.fragment.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailFragment"
            app:destination="@id/orderDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="com.ecommerce.app.fragment.OrderDetailFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_detail">
        <argument
            android:name="orderId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ecommerce.app.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_ordersFragment"
            app:destination="@id/ordersFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatbotFragment"
        android:name="com.ecommerce.app.fragment.ChatbotFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.ecommerce.app.fragment.SearchFragment"
        android:label="@string/search_results"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="searchQuery"
            app:argType="string" />
        <action
            android:id="@+id/action_searchFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>
</navigation>
